# oaqjp-final-project-emb-ai

./: .editorconfig  .pylintrc  2b_application_creation  3a_output_formatting  3b_formatted_output_test  4b_packaging_test  5b_unit_testing_result  6a_server  7a_error_handling_function  8a_server_modified  README.md  config.py  development.txt  pyproject.toml  server.py
EmotionDetection/: __init__.py  emotion_detection.py
routes/: __init__.py  emotion_routes.py  health.py
tests/: conftest.py  test_emotion_detection.py
